removed swp files and fixed some spacing issues in html

--- a/Style/altstyle.css
+++ b/Style/altstyle.css
@@ -11,7 +11,7 @@ html {
 /*}*/
 
 /*#Bday {*/
-    text-align: center;
+    /*text-align: center;*/
 }
 /*#Steve {*/
 	/*display: block;*/
